frontend/test/should_pass/reuse_007.grg
rule r {
	x: Node;
	y: Node;
	x-e:Edge->y;

	replace {
		x; y;
		x;
		-e->;
		y;
	}
}


