frontend/test/should_fail/edge_into_neg_002.grg
rule r {
	a:Node-e:Edge->;
	negative {
		x:Node-e->y:Node;
	}
	replace{}
}
